[project]
name = "typer-cheatsheet-command"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Martín Gaitán", email = "gaitan@gmail.com" }
]
requires-python = ">=3.13"
dependencies = ["typer"]

[project.scripts]
typer-cheatsheet-command = "typer_cheatsheet_command:app"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
